@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-24T01:04:34Z",
-  "count_outdated" : 292,
-  "uniques_outdated" : 151,
+  "timestamp" : "2022-05-24T16:17:35Z",
+  "count_outdated" : 293,
+  "uniques_outdated" : 152,
   "count" : 328,
   "uniques" : 175,
   "clones" : [
-    {
-      "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
